# Lovely

./: CMakeLists.txt
Include/: Lovely.h
Sources/: Main.c  State.c
